# ch_label_img

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake  PCH.cmake  PrettyPrint.cmake  QtInfo.cmake
cmake/core/: BuildConfig.cmake  CompileOptions.cmake  PCH.cmake  ProjectInfo.cmake  ProjectVerbose.cmake  PythonConfig.cmake
cmake/core/toolchains/: README.md  android-ndk-toolchain.cmake  clang-toolchain.cmake  default-toolchain.cmake  mingw-w64-toolchain.cmake
cmake/misc/: ModuleInfo.cmake  PrettyColors.cmake  PrettyPrint.cmake  QtInfo.cmake
cmake/test/: PerfTools.cmake  ValgrindTools.cmake
docs/: PROGRESS.md
include/: pch.h  proj_config.h.in
include/core/: async_logger.h  formatter.hpp  logger.hpp  message_queue.hpp  queue.h  queue.hpp
include/core/asm/: hp_timer.hpp
include/core/formatter/: function.h  reflection.h
include/core/refl/detail/: hash.hpp
include/core/refl/detail/hash/: hash_algorithms.hpp  hash_combiners.hpp  hash_config.hpp
include/page/: base_page.h  home.h  label_img.h
include/qtils/: action_manager.h  logger.hpp  qtils_pch.h
include/stacked_page/: base_page.h  home.h  label_img.h  stacked_page_pch.h
include/utils/: launch.h  method_concepts.h  singleton.h  version.h
include/widget/: image_file_item.h  image_file_list.h  image_viewer.h  labeling_canvas.h  message_box.h  region_cropper.h  selection_box.h  side_menu_bar.h  stacked_page_widget.h  status_bar.h  tool_bar.h  widget_pch.h
include/window/: mainwindow.h  window_pch.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  async_logger.cpp
src/page/: CMakeLists.txt  home.cpp  label_img.cpp
src/qtils/: CMakeLists.txt  action_manager.cpp
src/stacked_page/: CMakeLists.txt  home.cpp  label_img.cpp
src/utils/: CMakeLists.txt
src/widget/: CMakeLists.txt  image_file_item.cpp  image_file_list.cpp  image_viewer.cpp  labeling_canvas.cpp  message_box.cpp  region_cropper.cpp  selection_box.cpp  side_menu_bar.cpp  stacked_page_widget.cpp  status_bar.cpp  tool_bar.cpp
src/window/: CMakeLists.txt  mainwindow.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  benchmark_utils.hpp
tests/common/fixtures/: sample_data.hpp
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/performance/core/refl/: CMakeLists.txt
tests/performance/core/refl/hash/: CMakeLists.txt  benchmark_hash.cpp
tests/regression/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt
tests/unit/core/refl/: CMakeLists.txt
tests/unit/core/refl/hash/: CMakeLists.txt  test_algorithms.cpp  test_performance.cpp
tests/unit/core/sys/: CMakeLists.txt
